--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/kelvin8773/odin-restaurant-page#readme",
   "devDependencies": {
+    "css-loader": "^3.2.1",
+    "style-loader": "^1.0.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   }
