--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.1",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb": "^18.0.1",
     "file-loader": "^5.0.2",
     "style-loader": "^1.0.1",
     "webpack": "^4.41.2",
